syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";
option java_package = "org.example.model";

service ExampleService {
  rpc unaryProcedure (TheRequest) returns (TheResponse) {}
}

message TheRequest {
  string name = 1;
  int32 age = 2;
}

message TheResponse {
  string message = 1;
}
